fix: rules font size readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@
 
 .rules {
   font-size: 2vw;
+  background-color: rgba(179, 0, 21, 0.702);
 }
 
 .andika-bold {
@@ -149,11 +150,20 @@
 
 li {
   list-style-type: none;
-  background-color: rgba(179, 0, 21, 0.702);
 }
 
 .cPlayer {
   font-size: 3vw;
+}
+
+@media only screen and (max-width: 700px) {
+  .title {
+    font-size: 6vw;
+  }
+
+  .rules {
+    font-size: 1.5vw;
+  }
 }
 /* ------------- Buttons ------------- */
 
